All controls and ImgRadar done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="style.css" />
 		<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 	</head>
-	<body>
+	<body class="d-flex flex-column align-items-center">
 		<h1 class="text-center text-light">Guard Asteroid</h1>
 
 		<script src="./js/asteroid.js"></script>
