--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	</head>
 	<body class="d-flex flex-column align-items-center">
 		<h1 class="text-center text-light">Guard Asteroid</h1>
-
+		<script src="./js/rocketRight.js"></script>
+		<script src="./js/rocketLeft.js"></script>
 		<script src="./js/asteroid.js"></script>
 		<script src="./js/background.js"></script>
 		<script src="./js/player.js"></script>
