add sounds and asteroids to radar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		/>
 		<link rel="stylesheet" href="style.css" />
 		<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/addons/p5.sound.js"></script>
 	</head>
 	<body class="d-flex flex-column align-items-center">
 		<h1 class="text-center text-light">Guard Asteroid</h1>
